# grammar-correction-app

./: .dockerignore  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LLM_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_CHANGELOG.md  README.md  REFACTORING_SUMMARY.md  SETUP_STATUS.md  WINDOWS_DESKTOP_IMPLEMENTATION.md  docker-compose.prod.yml  docker-compose.yml  env.example  project.txt  test_languagetool_update.py
backend/: .gitignore  main.py  main.spec  pyproject.toml  pyrightconfig.json  requirements.txt  test_comprehensive_docx.py  test_llm_connection.py  test_with_docx.py
backend/models/: schemas.py
backend/services/: __init__.py  document_parser.py  enhanced_grammar_checker.py  grammar_checker.py  grammar_config.py  hybrid_grammar_checker.py  language_tool_server.py  line_specific_grammar_checker.py  llm_enhancer.py  llm_grammar_checker.py  performance_logger.py  progress_tracker.py  report_generator.py  streaming_grammar_checker.py  text_processor.py  websocket_manager.py
backend/services/categories/: __init__.py  agreement.py  ambiguous_pronouns.py  article_specificity.py  awkward_phrasing.py  base_category.py  broken_quote.py  capitalisation.py  clarity.py  comma_splice.py  compounds.py  contrast.py  coordination.py  dangling_clause.py  dialogue.py  ellipsis.py  fragment.py  grammar.py  hyphenation.py  missing_period.py  number_style.py  parallelism_concision.py  (+12 more)
backend/tests/: test_api.py  test_comprehensive_examples.py  test_docx_upload.py  test_line_specific_grammar_checker.py  test_optimized_chunk_processing.py  test_streaming_grammar_checker.py
(+90 files in other folders)
